feat: created slider layout

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="slider_indicator_selected_color">#FFF</color>
+    <color name="slider_indicator_unselected_color">#4DFFFFFF</color>
 </resources>
