--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -11,13 +11,24 @@
         android:layout_height="match_parent">
 
         <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/mainFragmentContainer"
+            android:id="@+id/sliderFragmentContainer"
             android:name="com.duhan.movieapp.feature_movie.presentation.slider.SliderFragment"
             android:layout_width="wrap_content"
-            android:layout_height="300dp"
+            android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            tools:layout="@layout/slider_fragment" />
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/listFragmentContainer"
+            android:name="com.duhan.movieapp.feature_movie.presentation.list.ListFragment"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/sliderFragmentContainer"
             tools:layout="@layout/slider_fragment" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
