--- a/app/src/main/res/layout/slider_item_view.xml
+++ b/app/src/main/res/layout/slider_item_view.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="item"
-            type="com.duhan.movieapp.feature_movie.presentation.slider.SliderItem" />
+            type="com.duhan.movieapp.feature_movie.presentation.MovieItem" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -21,7 +21,7 @@
             android:adjustViewBounds="true"
             android:scaleType="fitXY"
             android:src="@drawable/moonrise_kingdom"
-            app:imageUrl="@{item.image}"
+            app:imageUrl="@{item.imageUrl}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
